--- a/index.html
+++ b/index.html
@@ -3,65 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="script/index.js"></script>
+    <title>Calcolatrice</title>
     <link rel="stylesheet" href="style/style.css">
-    <!-- icona google backspace -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=backspace" />
+    <script src="script/index.js"></script>
 </head>
 <body>
-    <div class="cointainer-totale">
-        <div class="history-container">
-            <h1>
-                History
-            </h1>
-            <hr>
-
+    <div class="calculator">
+        <div class="history">
+            <h2>Cronologia</h2>
+            <ul id="history-list"></ul>
         </div>
-        <div class="calcolatrice-cointainer">
-            <h1>Calcolatrice</h1>
-            <h3>Effetua i calcoli</h3>
-            <div class="live-counter">
-                <p id="live2">‎</p> <!-- carattere vuoto -->
-            </div>
-            <div class="live-counter">
-                <p id="live1">‎</p> <!-- carattere vuoto -->
-            </div>
-            <div class="live-counter">
-                <p id="live">‎</p> <!-- carattere vuoto -->
-            </div>
-                <table class="dati-calcolatrice">
-                    <td><button onclick="live(7)">7</button></td>
-                    <td><button onclick="live(8)">8</button></td>
-                    <td><button onclick="live(9)">9</button></td>
-                    <td><button onclick="live('/')">÷</button></td>
-                    <td><button onclick="reset()">AC</button></td>
-                    
-                    <tr></tr>
+        <div id="display" class="display">0</div>
+        <div class="buttons">
+            <button onclick="appendNumber(7)">7</button>
+            <button onclick="appendNumber(8)">8</button>
+            <button onclick="appendNumber(9)">9</button>
+            <button onclick="setOperator('+')">+</button>
+            
+            <button onclick="appendNumber(4)">4</button>
+            <button onclick="appendNumber(5)">5</button>
+            <button onclick="appendNumber(6)">6</button>
+            <button onclick="setOperator('-')">-</button>
 
-                    <td><button onclick="live(4)">4</button></td>
-                    <td><button onclick="live(5)">5</button></td>
-                    <td><button onclick="live(6)">6</button></td>
-                    <td><button onclick="live('*')">*</button></td>
-                    <td><button onclick="live('()')">( )</button></td>
+            <button onclick="appendNumber(1)">1</button>
+            <button onclick="appendNumber(2)">2</button>
+            <button onclick="appendNumber(3)">3</button>
+            <button onclick="setOperator('*')">*</button>
 
-                    <tr></tr>
-
-                    <td><button onclick="live(1)">1</button></td>
-                    <td><button onclick="live(2)">2</button></td>
-                    <td><button onclick="live(3)">3</button></td>
-                    <td><button onclick="live('-')">-</button></td>
-                    <td><button onclick="live('%')">%</button></td>
-
-                    <tr></tr>
-
-                    <td><button onclick="live(0)">0</button></td>
-                    <td><button onclick="live('.')">.</button></td>
-                    <td><button onclick="live('del')"><span class="material-symbols-outlined">backspace</span></button></td>
-                    <td><button onclick="live('+')">+</button></td>
-                    <td><button onclick="calcola()">=</button></td>
-                </table>
-        </div>    
+            <button onclick="appendNumber(0)">0</button>
+            <button onclick="clearDisplay()">C</button>
+            <button onclick="calculate()">=</button>
+            <button onclick="setOperator('/')">/</button>
+        </div>
     </div>
 </body>
 </html>
